pulldown-cmark-mdcat/tests/snapshots/render/ansi@commonmark-spec-309-lists.snap
---
source: pulldown-cmark-mdcat/tests/render.rs
expression: "render_to_string(markdown_file, &ansi_settings)"
input_file: pulldown-cmark-mdcat/tests/markdown/commonmark-spec/309-lists.md
---
• foo

  notcode

• foo

[32m<!-- -->
[0m

[33mcode
[0m
