pulldown-cmark-mdcat/tests/snapshots/render/ansi@commonmark-spec-313-lists.snap
---
source: pulldown-cmark-mdcat/tests/render.rs
expression: "render_to_string(markdown_file, &ansi_settings)"
input_file: pulldown-cmark-mdcat/tests/markdown/commonmark-spec/313-lists.md
---
 1. a

 2. b


[33m[48;5;236m3. c[K[0m
