pulldown-cmark-mdcat/tests/snapshots/render/ansi@commonmark-spec-318-lists.snap
---
source: pulldown-cmark-mdcat/tests/render.rs
expression: "render_to_string(markdown_file, &ansi_settings)"
input_file: pulldown-cmark-mdcat/tests/markdown/commonmark-spec/318-lists.md
---
• a
• 

    [33mb
[0m    [33m
[0m    [33m
[0m  

• c
