pulldown-cmark-mdcat/tests/snapshots/render/ansi@commonmark-spec-321-lists.snap
---
source: pulldown-cmark-mdcat/tests/render.rs
expression: "render_to_string(markdown_file, &ansi_settings)"
input_file: pulldown-cmark-mdcat/tests/markdown/commonmark-spec/321-lists.md
---
• a
  [36m│[0m [3mb[0m


    [33mc
[0m  

• d
